# huginn

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  config.example.json  config.full.json  config.minimal.json  rustfmt.toml
docs/: README.md
docs/api/: README.md
docs/design/: Implementation.md  README.md
docs/design/agents/: IMPLEMENTATION_SUMMARY.md  TODO.md
docs/design/architecture/: Deployment_Architecture.md  NFRs.md  Plugin_System.md  README.md  Requirement_1.md  Requirement_2.md  Requirement_3.md  Requirement_4.md  Requirement_5.md  System_Architecture.md
huginn/: Cargo.toml
huginn/src/: config.rs  formatters.rs  logging.rs  main.rs  plugins.rs  scanner.rs  security.rs
huginn/src/plugins/: ping.rs  tcp_connect.rs  tcp_syn.rs  udp.rs
