[workspace]
resolver = "2"
members = ["huginn"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["JEleniel"]
repository = "https://github.com/JEleniel/huginn"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
fern = "0.7"
chrono = "0.4"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
