[workspace]
resolver = "3"
members = ["huginn"]

[workspace.package]
version = "0.1.0-alpha.1"
authors = ["JEleniel"]
edition = "2024"
repository = "https://github.com/JEleniel/huginn"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.2"
config = { version = "0.15.18", features = ["ini", "json"] }
fern = { version = "0.7.1", features = ["colored", "date-based"] }
log = { version = "0.4.28", features = ["kv_serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.41", features = ["full"] }

[workspace.lints.rust]
unsafe_code = "forbid"
