[package]
name = "huginn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cyber threat scanning toolkit - The raven of Odin searches the world for knowledge and threats"

[dependencies]
tokio.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
async-trait.workspace = true

[lints.rust]
unsafe_code = "forbid"
