[package]
name = "huginn"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Cyber threat scanning toolkit - The raven of Odin searches the world for knowledge and threats"
repository.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
atty.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
config.workspace = true
fern.workspace = true
indicatif.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
